// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v30;

import "com/digitalasset/canton/protocol/v30/traffic_control_parameters.proto";
import "google/protobuf/duration.proto";
import "scalapb/scalapb.proto";

// catch-up configuration parameters
message AcsCommitmentsCatchUpConfig {
  uint32 catchup_interval_skip = 1;
  uint32 nr_intervals_to_trigger_catchup = 2;
}

// individual per participant limits
message ParticipantSynchronizerLimits {
  uint32 confirmation_requests_max_rate = 1;

  reserved 2; // was max_num_parties = 2;

  reserved 3; // was max_num_packages = 3;
}

// Controls how participants can join the synchronizer
// Note that currently, only transitions from restricted to unrestricted are supported, but not
// the other way around.
enum OnboardingRestriction {
  ONBOARDING_RESTRICTION_UNSPECIFIED = 0;

  // Any participant can join the synchronizer
  ONBOARDING_RESTRICTION_UNRESTRICTED_OPEN = 1;

  // No participant can currently join the synchronizer
  ONBOARDING_RESTRICTION_UNRESTRICTED_LOCKED = 2;

  // Only participants with a valid participant synchronizer permission are allowed to join the synchronizer (allowlisting)
  ONBOARDING_RESTRICTION_RESTRICTED_OPEN = 3;

  // No participant can currently join the restricted synchronizer
  ONBOARDING_RESTRICTION_RESTRICTED_LOCKED = 4;
}

message DynamicSynchronizerParameters {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  google.protobuf.Duration confirmation_response_timeout = 1;
  google.protobuf.Duration mediator_reaction_timeout = 2;
  google.protobuf.Duration assignment_exclusivity_timeout = 3;
  google.protobuf.Duration topology_change_delay = 4;
  google.protobuf.Duration ledger_time_record_time_tolerance = 5;
  google.protobuf.Duration reconciliation_interval = 6;
  google.protobuf.Duration mediator_deduplication_timeout = 7;
  uint32 max_request_size = 8;

  // topology related validation parameters
  // permissioned synchronizer: if true, only participants which have been explicitly
  // put on the allow list can onboard to the synchronizer
  OnboardingRestriction onboarding_restriction = 9;

  reserved 11; // was required_packages = 11;

  reserved 12; // was only_required_packages_permitted = 12;

  ParticipantSynchronizerLimits participant_synchronizer_limits = 13;

  reserved 14; // was default_max_hosting_participants_per_party = 14;
  google.protobuf.Duration sequencer_aggregate_submission_timeout = 15;
  com.digitalasset.canton.protocol.v30.TrafficControlParameters traffic_control = 16;
  AcsCommitmentsCatchUpConfig acs_commitments_catchup = 17;
  google.protobuf.Duration submission_time_record_time_tolerance = 18;
}
